--- a/config/paypal.yml.example
+++ b/config/paypal.yml.example
@@ -3,3 +3,5 @@ paypal_password: 'passowrd'
 paypal_signature: 'sig'
 paypal_success_redirect: 'http://localhost:2000/media/purchase_confirm'
 paypal_error_redirect: 'http://localhost:2000/media/purchase_error'
+contribution_paypal_success_redirect: 'http://localhost:2000/accept_contribution'
+contribution_paypal_error_redirect: 'http://localhost:2000/contribute'
